--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="nav-container">
         <div class="judul">
-            <h1>Kampar</h1>
+            <h1>Kampar</h1><br>
             <p>Bumi sarimadu dan serambi mekkah</p>
         </div>
         <nav>
