--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
 </head>
 
 <body>
-    <header class="nav-container">
+    <header class="nav-container" id="home">
         <div class="judul">
             <h1>Kampar</h1><br>
             <p>Bumi sarimadu dan serambi mekkah</p>
         </div>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Sejarah</a></li>
-                <li><a href="">Wisata</a></li>
-                <li><a href="">Geografis</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#sejarah">Sejarah</a></li>
+                <li><a href="#wisata">Wisata</a></li>
+                <li><a href="#geografis">Geografis</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <div class="content">
+        <div class="content" id="sejarah">
             <article class="article-card">
                 <h2> Sejarah</h2>
                 <img src="asset/R.jpeg" alt="Sejarah">
@@ -44,7 +44,7 @@
                 </p>
             </article>
 
-            <article class="article-card">
+            <article class="article-card" id="wisata">
                 <h2> Wisata</h2>
                 <h4>Stanum Bangkinang</h4>
                 <p>Stanum Bangkinang merupakan salah satu destinasi wisata paling populer di Kampar. Tempat ini
@@ -56,7 +56,7 @@
                 <img src="asset/images.jpeg" alt="Sejarah">
             </article>
 
-            <article class="article-card">
+            <article class="article-card" id="geografis">
                 <h2> Geografis</h2>
                 <img src="asset/peta-riau-hd.jpg" alt="Sejarah">
                 <p>Geografi Kabupaten Kampar
